integrando libreria js modernizr para compatibilidad con IE8

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 			<meta name="description" content="">
 			<link rel="stylesheet" type="text/css" href="css/estilos.css">
 			<script type="text/javascript" src="js/prefixfree.js"></script>
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+			<script type="text/javascript" src="js/modernizr.js"></script>
+			<script type="text/javascript" src="js/jquery.js"></script>
 			<script type="text/javascript">
 				function MM_validateForm() { //v4.0
 				  if (document.getElementById){
