incorporando boton de login de correo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 			<meta name="description" content="">
 			<link rel="stylesheet" type="text/css" href="css/estilos.css">
 			<script type="text/javascript" src="js/prefixfree.js"></script>
-			<script type="text/javascript" src="js/modernizr.js"></script>
-			<script type="text/javascript" src="js/jquery.js"></script>
+			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 			<script type="text/javascript">
 				function MM_validateForm() { //v4.0
 				  if (document.getElementById){
@@ -54,6 +53,7 @@
     <input type="reset" name="button2" id="button2" value="Borrar" />
   </p>
 </form>
+<a href="http://www.ecoplagveracruz.com/webmail" target="_blank">Login</a>
 		<!--<header>cabecera</header>
 		<nav>navegacion</nav>
 		<aside>contenido tangencial</aside>
